--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:name=".TwitterClientApp"
+        android:theme="@style/AppTheme.NoActionBar">
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="3068c698310bf3b54c95b6fde897208eabcdf884" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
