--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,16 @@
     package="me.juancrg90.android.twitterclient">
 
     <application
+        android:name=".TwitterClientApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".TwitterClientApp"
         android:theme="@style/AppTheme.NoActionBar">
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="3068c698310bf3b54c95b6fde897208eabcdf884" />
+
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".main.MainActivity"></activity>
     </application>
 
 </manifest>
